--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -170,7 +170,7 @@
                 android:textAlignment="center"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/colorBlue"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"/>
 
             <ImageView
@@ -184,6 +184,19 @@
                 android:layout_marginBottom="15sp"
                 android:layout_marginLeft="15sp"
                 android:layout_marginRight="15sp"/>
+
+            <TextView
+                android:id="@+id/textview_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/informaci_n_layout"
+                android:layout_marginBottom="20sp"
+                android:layout_marginStart="16sp"
+                android:textAlignment="textStart"
+                android:layout_gravity="start"
+                android:textColor="@color/colorBlue"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
