--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -74,6 +74,7 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <!--
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -82,83 +83,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/x_dospuntos"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/colorBlue"
-                    android:textSize="30sp"
-                    android:textStyle="bold"/>
-                <Spinner
-                    android:id="@+id/spinner_layout_x"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:textColor="@color/colorBlue"
-                    android:backgroundTint="@color/colorBlue"
-                    android:spinnerMode="dropdown" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/y_dospuntos"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/colorBlue"
-                    android:textSize="30sp"
-                    android:textStyle="bold"/>
-                <Spinner
-                    android:id="@+id/spinner_layout_y"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:textColor="@color/colorBlue"
-                    android:backgroundTint="@color/colorBlue"
-                    android:spinnerMode="dropdown" />
-
-            </LinearLayout>
-
-            <com.jjoe64.graphview.GraphView
-                android:layout_width="match_parent"
-                android:layout_height="400sp"
-                android:layout_marginLeft="15sp"
-                android:layout_marginRight="15sp"
-                android:layout_marginTop="15sp"
-                android:layout_marginBottom="15sp"
-                android:id="@+id/graph" />
-
-            <TextView
-                android:id="@+id/textview_layout_graph_labels"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/n_mero_etiqueta"
-                android:layout_marginTop="20sp"
-                android:layout_marginStart="16sp"
-                android:textAlignment="textStart"
-                android:layout_gravity="start"
-                android:textColor="@color/colorBlue"
-                android:textSize="16sp"
-                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textview_layout_tareas_completadas"
@@ -201,6 +125,18 @@
         </LinearLayout>
 
     </ScrollView>
+
+    -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <WebView
+            android:id="@+id/web"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
